# Mashiro2

./: .gitignore  config.json  keep_alive.py  main.py  pyproject.toml
cogs/: errors.py  fun.py  info.py  listeners.py  nhentai.py  owner.py  server.py  slash_test.py  test.py
utils/: data.py  default.py  doujintools.py  hentai.py  lists.py  permissions.py  reader.py  views.py
