[tool.poetry]
name = "mashiro2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^21.2.0"
chardet = "^4.0.0"
multidict = "^5.2.0"
yarl = "^1.7.0"
backoff = "^1.11.1"
typing-extensions = "^3.10.0"
idna_ssl = "^1.1.0"
Flask = "^2.0.2"
psutil = "^5.8.0"
replit = "^3.2.4"
nextcord-ext-menus = "^1.3.2"
nextcord = "^2.0.0-alpha.3"
hentai = "^3.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
